--- a/src/JuliusSweetland.OptiKey.AutoCompletePerformance/JuliusSweetland.OptiKey.AutoCompletePerformance.csproj
+++ b/src/JuliusSweetland.OptiKey.AutoCompletePerformance/JuliusSweetland.OptiKey.AutoCompletePerformance.csproj
@@ -7,10 +7,13 @@
     <ProjectGuid>{5831AF7F-EB4B-42A4-8184-0C8B3A77466B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AssemblyName>JuliusSweetland.OptiKey.AutoCompletePerformance</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <ApplicationVersion>1.0.0.0</ApplicationVersion>
     <FileAlignment>512</FileAlignment>
     <RootNamespace>JuliusSweetland.OptiKey.AutoCompletePerformance</RootNamespace>
+    <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -82,6 +85,7 @@
     <None Include="..\JuliusSweetland.OptiKey\Dictionaries\RussianRussia.dic">
       <Link>Dictionaries\RussianRussia.dic</Link>
     </None>
+    <None Include="app.config" />
     <None Include="MisspellingsEnglishUK.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -102,4 +106,11 @@
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
 </Project>
